--- a/config/crd/bases/conventions.carto.run_podintents.yaml
+++ b/config/crd/bases/conventions.carto.run_podintents.yaml
@@ -2407,6 +2407,9 @@ spec:
                             maxSkew:
                               format: int32
                               type: integer
+                            minDomains:
+                              format: int32
+                              type: integer
                             topologyKey:
                               type: string
                             whenUnsatisfiable:
@@ -5506,6 +5509,9 @@ spec:
                                   type: object
                               type: object
                             maxSkew:
+                              format: int32
+                              type: integer
+                            minDomains:
                               format: int32
                               type: integer
                             topologyKey:
