Add serviceaccount to deployment; revert podintent defaults change

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -51,6 +51,7 @@ spec:
       - name: ca-certs
         secret:
           secretName: ca-certificates
+      serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
 ---
 apiVersion: v1
