--- a/config/crd/bases/conventions.carto.run_clusterpodconventions.yaml
+++ b/config/crd/bases/conventions.carto.run_clusterpodconventions.yaml
@@ -35,6 +35,9 @@ spec:
             properties:
               priority:
                 type: string
+              selectorTarget:
+                default: podTemplateSpec
+                type: string
               selectors:
                 items:
                   properties:
@@ -98,6 +101,8 @@ spec:
                 required:
                 - clientConfig
                 type: object
+            required:
+            - selectorTarget
             type: object
         required:
         - spec
