--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -345,7 +345,7 @@ jobs:
 
         kapp deploy -a kapp-controller -n kube-system \
           --wait-timeout 5m -y \
-          -f https://github.com/vmware-tanzu/carvel-kapp-controller/releases/download/v0.39.0/release.yml \
+          -f https://github.com/vmware-tanzu/carvel-kapp-controller/releases/latest/download/release.yml \
           -f <( \
             ytt -f .github/kapp/kapp-controller-config.yaml \
               --data-value-file ca_cert_data=${CERT_DIR}/ca.pem \
@@ -367,7 +367,7 @@ jobs:
           --wait-timeout 5m \
           -f <( \
             ytt -f dist/package.yaml -f dist/package.values.yaml \
-              --data-value version=0.1.0-snapshot \
+              --data-value version=0.0.0-snapshot \
               --data-value image=${BUNDLE}/controller \
           )
 
@@ -381,7 +381,7 @@ jobs:
         kapp deploy -a cartographer-conventions-controller -y \
           -f <( \
             ytt -f dist/package-install.yaml -f dist/package-install.values.yaml \
-              --data-value package_constraints=0.1.0-snapshot \
+              --data-value package_constraints=0.0.0-snapshot \
               --data-value-yaml 'package_prerelease={}' \
           )
 
@@ -397,7 +397,7 @@ jobs:
         kapp deploy -a cartographer-conventions-controller -y \
           -f <( \
             ytt -f dist/package-install.yaml -f dist/package-install.values.yaml \
-              --data-value package_constraints=0.1.0-snapshot \
+              --data-value package_constraints=0.0.0-snapshot \
               --data-value-yaml 'package_prerelease={}' \
               --data-value sync_period=10s \
               --data-value-yaml 'has_values=true' \
@@ -477,7 +477,7 @@ jobs:
           kapp list -A
         echo "##[endgroup]"
         echo "##[group]Package changesets"
-          kapp app-change list -a cartographer-conventions-controller-ctrl
+          kapp app-change list -a cartographer-conventions-controller.app
         echo "##[endgroup]"
         echo "##[group]kapp-controller logs"
           kubectl logs -n kapp-controller -l app=kapp-controller -c kapp-controller --tail 1000
@@ -535,7 +535,7 @@ jobs:
         set -o nounset
         set -o pipefail
 
-        deploys=$(kapp app-change list -a cartographer-conventions-controller-ctrl --json | jq '.Tables[0].Rows | length')
+        deploys=$(kapp app-change list -a cartographer-conventions-controller.app --json | jq '.Tables[0].Rows | length')
         if [ "$deploys" != "1" ]; then
           echo "Too many app changes for the cartographer-conventions-controller package, expected 1 found ${deploys}"
           exit 1
