--- a/config/crd/bases/conventions.carto.run_clusterpodconventions.yaml
+++ b/config/crd/bases/conventions.carto.run_clusterpodconventions.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
+    controller-gen.kubebuilder.io/version: v0.10.0
   creationTimestamp: null
   name: clusterpodconventions.conventions.carto.run
 spec:
@@ -61,6 +61,7 @@ spec:
                         type: string
                       type: object
                   type: object
+                  x-kubernetes-map-type: atomic
                 type: array
               webhook:
                 properties:
@@ -107,9 +108,3 @@ spec:
     served: true
     storage: true
     subresources: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
