chore: generarte a pull request if there a local changes

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -2,6 +2,7 @@ name: Update
 
 on:
   workflow_dispatch:
+  pull_request:
   schedule:
     - cron: "5 * * * *"
 
@@ -20,4 +21,19 @@ jobs:
       uses: updatecli/updatecli-action@v2
 
     - name: Run UpdateCLI
-      run: "updatecli apply --push=false"
+      id: updatecli
+      run: |
+        output=$(updatecli apply --push=false)
+        echo $output
+        output="${output//$'\n'/\\n}"
+        
+        echo "stdout=$output" >> $GITHUB_OUTPUT
+
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v3
+      if: github.event_name != 'pull_request'
+      with:
+        commit-message: 'chore: bumped base image digest'
+        signoff: false
+        title: 'chore: bumped base image digest'
+        body: ${{ steps.updatecli.outputs.stdout }} 
