chore: SA Token used for base image update PR
Signed-off-by: Rashed Kamal <krashed@vmware.com>

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -33,6 +33,7 @@ jobs:
       uses: peter-evans/create-pull-request@v4
       if: github.event_name != 'pull_request'
       with:
+        token: ${{ secrets.UPDATECLI_GITHUB_TOKEN }}
         commit-message: 'chore: bumped base image digest'
         signoff: false
         title: 'chore: bumped base image digest'
