update the controller-tools to version v0.11.0

--- a/config/crd/bases/conventions.carto.run_podintents.yaml
+++ b/config/crd/bases/conventions.carto.run_podintents.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.11.1
+    controller-gen.kubebuilder.io/version: v0.11.0
   creationTimestamp: null
   name: podintents.conventions.carto.run
 spec:
@@ -837,6 +837,7 @@ spec:
                                     required:
                                     - name
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                   type: array
                                   x-kubernetes-list-type: set
                                 limits:
@@ -1464,6 +1465,7 @@ spec:
                                     required:
                                     - name
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                   type: array
                                   x-kubernetes-list-type: set
                                 limits:
@@ -2098,6 +2100,7 @@ spec:
                                     required:
                                     - name
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                   type: array
                                   x-kubernetes-list-type: set
                                 limits:
@@ -2766,6 +2769,7 @@ spec:
                                                 required:
                                                 - name
                                                 type: object
+                                                x-kubernetes-map-type: atomic
                                               type: array
                                               x-kubernetes-list-type: set
                                             limits:
@@ -4073,6 +4077,7 @@ spec:
                                     required:
                                     - name
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                   type: array
                                   x-kubernetes-list-type: set
                                 limits:
@@ -4700,6 +4705,7 @@ spec:
                                     required:
                                     - name
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                   type: array
                                   x-kubernetes-list-type: set
                                 limits:
@@ -5334,6 +5340,7 @@ spec:
                                     required:
                                     - name
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                   type: array
                                   x-kubernetes-list-type: set
                                 limits:
@@ -6002,6 +6009,7 @@ spec:
                                                 required:
                                                 - name
                                                 type: object
+                                                x-kubernetes-map-type: atomic
                                               type: array
                                               x-kubernetes-list-type: set
                                             limits:
