--- a/config/crd/bases/conventions.carto.run_podintents.yaml
+++ b/config/crd/bases/conventions.carto.run_podintents.yaml
@@ -837,9 +837,10 @@ spec:
                                     required:
                                     - name
                                     type: object
-                                    x-kubernetes-map-type: atomic
                                   type: array
-                                  x-kubernetes-list-type: set
+                                  x-kubernetes-list-map-keys:
+                                  - name
+                                  x-kubernetes-list-type: map
                                 limits:
                                   additionalProperties:
                                     anyOf:
@@ -1465,9 +1466,10 @@ spec:
                                     required:
                                     - name
                                     type: object
-                                    x-kubernetes-map-type: atomic
                                   type: array
-                                  x-kubernetes-list-type: set
+                                  x-kubernetes-list-map-keys:
+                                  - name
+                                  x-kubernetes-list-type: map
                                 limits:
                                   additionalProperties:
                                     anyOf:
@@ -2100,9 +2102,10 @@ spec:
                                     required:
                                     - name
                                     type: object
-                                    x-kubernetes-map-type: atomic
                                   type: array
-                                  x-kubernetes-list-type: set
+                                  x-kubernetes-list-map-keys:
+                                  - name
+                                  x-kubernetes-list-type: map
                                 limits:
                                   additionalProperties:
                                     anyOf:
@@ -2769,9 +2772,10 @@ spec:
                                                 required:
                                                 - name
                                                 type: object
-                                                x-kubernetes-map-type: atomic
                                               type: array
-                                              x-kubernetes-list-type: set
+                                              x-kubernetes-list-map-keys:
+                                              - name
+                                              x-kubernetes-list-type: map
                                             limits:
                                               additionalProperties:
                                                 anyOf:
@@ -4077,9 +4081,10 @@ spec:
                                     required:
                                     - name
                                     type: object
-                                    x-kubernetes-map-type: atomic
                                   type: array
-                                  x-kubernetes-list-type: set
+                                  x-kubernetes-list-map-keys:
+                                  - name
+                                  x-kubernetes-list-type: map
                                 limits:
                                   additionalProperties:
                                     anyOf:
@@ -4705,9 +4710,10 @@ spec:
                                     required:
                                     - name
                                     type: object
-                                    x-kubernetes-map-type: atomic
                                   type: array
-                                  x-kubernetes-list-type: set
+                                  x-kubernetes-list-map-keys:
+                                  - name
+                                  x-kubernetes-list-type: map
                                 limits:
                                   additionalProperties:
                                     anyOf:
@@ -5340,9 +5346,10 @@ spec:
                                     required:
                                     - name
                                     type: object
-                                    x-kubernetes-map-type: atomic
                                   type: array
-                                  x-kubernetes-list-type: set
+                                  x-kubernetes-list-map-keys:
+                                  - name
+                                  x-kubernetes-list-type: map
                                 limits:
                                   additionalProperties:
                                     anyOf:
@@ -6009,9 +6016,10 @@ spec:
                                                 required:
                                                 - name
                                                 type: object
-                                                x-kubernetes-map-type: atomic
                                               type: array
-                                              x-kubernetes-list-type: set
+                                              x-kubernetes-list-map-keys:
+                                              - name
+                                              x-kubernetes-list-type: map
                                             limits:
                                               additionalProperties:
                                                 anyOf:
