chore: Dependency update & limit base image update check
Signed-off-by: Rashed Kamal <krashed@vmware.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -35,3 +35,7 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+  groups:
+    k8s-dependencies:
+      patterns:
+      - "k8s.io*"
